# TECS-compiler

./: CMakeLists.txt  README.md  make.sh
src/: SConscript  compiler.cpp  compiler.h  main.cpp  parser.h  tokenizer.cpp  tokenizer.h
src/parser/: parserImpl.cpp  parserImpl.h
src/test/: testTokenizer.cpp
src/tokenizer/: tokenizerImpl.cpp  tokenizerImpl.h
